small fixes with overflowing

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -26,7 +26,7 @@ body, html {
     position: relative;
     min-height: 100vh;
     max-width: 100vw;
-    width: 100wv;
+    overflow-x: hidden;
 }
 
 *::selection {
@@ -76,6 +76,10 @@ a:hover {
     outline: none;
     transform: scale(1.05, 1.05);
     box-shadow: 0px 0px 20px -10px rgba(0, 0, 0, .8);
+}
+
+body > * {
+    max-width: 100vw;
 }
 
 /* ****** NAVBAR ******* */
@@ -677,7 +681,7 @@ a:hover {
 
 .statistics {
     background: linear-gradient(var(--third-color), var(--color_4));
-    width: 100vw;
+    max-width: 100vw;
     position: relative;
     color: white;
     padding-bottom: 100px;
